# KDUtils

./: .clang-format  .clang-tidy  .cmake-format.py  .codespellrc  .gitignore  .gitmodules  .gitreview  .krazy  .markdownlintignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  ChangeLog  LICENSE.txt  README.md  REUSE.toml  appveyor.yml  kdnetwork-plan.md  sse-plan.md  vcpkg-configuration.json  vcpkg.json  websockets-plan.md
examples/: CMakeLists.txt
examples/android/gui_window/: CMakeLists.txt  build.gradle.kts  gui_window.cpp  local.properties  settings.gradle.kts
examples/android/gui_window/app/: build.gradle.kts
examples/filesystem/: CMakeLists.txt  filesystem.cpp
examples/filesystem/android/: CMakeLists.txt  settings.gradle.kts
examples/filesystem/android/app/: build.gradle.kts  proguard-rules.pro
examples/gui_window/: CMakeLists.txt  gui_window.cpp
examples/gui_window/android/: CMakeLists.txt  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/gui_window/android/app/: .gitignore  build.gradle.kts
examples/http_client/: CMakeLists.txt  main.cpp
examples/mqtt_client/: CMakeLists.txt  mqtt_client.cpp
examples/open_ai_client/: CMakeLists.txt  main.cpp  open_ai_client.cpp  open_ai_client.h
examples/open_ai_client_sse/: CMakeLists.txt  main.cpp  open_ai_client.cpp  open_ai_client.h  open_ai_client_sse.cpp  open_ai_client_sse.h
examples/tcp_client/: CMakeLists.txt  client.cpp  client.h  main.cpp
examples/tcp_server/: CMakeLists.txt  main.cpp  server.cpp  server.h
examples/websocket_client/: CMakeLists.txt  main.cpp
src/KDCore/: CMakeLists.txt  bytearray.cpp  bytearray.h  dir.cpp  dir.h  elapsedtimer.cpp  elapsedtimer.h  file.cpp  file.h  flags.h  logger.h  url.cpp  url.h
src/KDCore/cmake/: KDCoreConfig.cmake.in
src/KDFoundation/: CMakeLists.txt  config.h  constexpr_sort.h  core_application.cpp  core_application.h  destruction_helpers.h  event.cpp  event.h  event_loop.cpp  event_loop.h  event_queue.h  event_receiver.cpp  event_receiver.h  file_descriptor_notifier.cpp  file_descriptor_notifier.h  flags.h  formatters.h  hashutils.h  kdfoundation_global.h  logging.h  object.cpp  object.h  postman.cpp  postman.h  timer.cpp  timer.h  utils.h  vector_helper.h
src/KDFoundation/cmake/: KDFoundationConfig.cmake.in
src/KDFoundation/platform/: abstract_platform_event_loop.cpp  abstract_platform_event_loop.h  abstract_platform_integration.h  abstract_platform_timer.h
src/KDFoundation/platform/android/: android_platform_event_loop.cpp  android_platform_event_loop.h  android_platform_integration.cpp  android_platform_integration.h  android_platform_timer.cpp  android_platform_timer.h
src/KDFoundation/platform/linux/: linux_platform_event_loop.cpp  linux_platform_event_loop.h  linux_platform_integration.cpp  linux_platform_integration.h  linux_platform_timer.cpp  linux_platform_timer.h
src/KDFoundation/platform/macos/: macos_platform_event_loop.h  macos_platform_event_loop.mm  macos_platform_integration.h  macos_platform_integration.mm  macos_platform_timer.h  macos_platform_timer.mm
src/KDFoundation/platform/win32/: win32_platform_event_loop.cpp  win32_platform_event_loop.h  win32_platform_integration.cpp  win32_platform_integration.h  win32_platform_timer.cpp  win32_platform_timer.h
src/KDGui/: CMakeLists.txt  abstract_clipboard.h  abstract_gui_platform_integration.h  abstract_platform_window.cpp  abstract_platform_window.h  config.h  gui_application.cpp  gui_application.h  gui_events.h  kdgui_global.h  kdgui_keys.h  position.h  window.cpp  window.h  window_extent_watcher.h
src/KDGui/cmake/: KDGuiConfig.cmake.in
src/KDGui/platform/android/: android_keyboard_map.cpp  android_keyboard_map.h  android_platform_event_loop.cpp  android_platform_event_loop.h  android_platform_integration.cpp  android_platform_integration.h  android_platform_window.cpp  android_platform_window.h
src/KDGui/platform/cocoa/: cocoa_platform_integration.h  cocoa_platform_integration.mm  cocoa_platform_integration_impl.h  cocoa_platform_integration_impl.mm  cocoa_platform_window.h  cocoa_platform_window.mm
src/KDGui/platform/win32/: win32_keyboard_map.h  (+7 more)
src/KDMqtt/: CMakeLists.txt  kdmqtt_global.h  mosquitto_wrapper.h  mqtt.cpp  mqtt.h
src/KDMqtt/cmake/: KDMqttConfig.cmake.in
src/KDNetwork/: CMakeLists.txt  dns_resolver.cpp  dns_resolver.h  http_client.cpp  http_client.h  http_cookie.cpp  http_cookie.h  http_cookie_jar.cpp  http_cookie_jar.h  http_parser.cpp  http_parser.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_session.cpp  http_session.h  ip_address.cpp  ip_address.h  network_initializer.cpp  network_initializer.h  socket.cpp  socket.h  socket_error.cpp  socket_error.h  sse_client.cpp  sse_client.h  sse_event.cpp  sse_event.h  ssl_socket.cpp  ssl_socket.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h  websocket_client.cpp  websocket_client.h  websocket_common.h  (+2 more)
src/KDNetwork/cmake/: KDNetworkConfig.cmake.in
src/KDUtils/: CMakeLists.txt  bytearray.cpp  bytearray.h  color.h  dir.cpp  dir.h  elapsedtimer.cpp  elapsedtimer.h  file.cpp  file.h  file_mapper.cpp  file_mapper.h  flags.h  kdutils_global.h  logger.h  logging.cpp  logging.h  signal.h  tailwind_colors.h  uri.cpp  uri.h  url.cpp  url.h
src/KDUtils/cmake/: KDUtilsConfig.cmake.in
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt
tests/auto/bytearray/: CMakeLists.txt  tst_bytearray.cpp
tests/auto/common/: event_mockups.h  signal_spy.h  utils.h
tests/auto/dir/: CMakeLists.txt  tst_dir.cpp
tests/auto/elapsedtimer/: CMakeLists.txt  tst_elapsedtimer.cpp
tests/auto/file/: CMakeLists.txt  tst_file.cpp
tests/auto/flags/: CMakeLists.txt  tst_flags.cpp
tests/auto/foundation/: CMakeLists.txt
tests/auto/gui/: CMakeLists.txt
tests/auto/mqtt/: CMakeLists.txt  tst_mosquitto_mock.h  tst_mqtt.cpp
tests/auto/network/: CMakeLists.txt
tests/auto/url/: CMakeLists.txt  tst_url.cpp
tests/auto/utils/: CMakeLists.txt
tests/platform/android/: CMakeLists.txt  kdutilstest.cpp  settings.gradle.kts
(+133 files in other folders)
